<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="221dp"
        android:layout_height="210dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/avatar_latin_boy" />

    <EditText
        android:id="@+id/UserId"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/idText"
        android:inputType="textPersonName"
        android:visibility="visible" />

    <EditText
        android:id="@+id/UserPW"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="62dp"
        android:ems="10"
        android:hint="@string/passwordtext"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserId" />

    <Switch
        android:id="@+id/autoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginEnd="56dp"
        android:text="@string/autoLogin"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserId" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_button_color"
        android:text="@string/loginButton"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/login_button_color"
        android:text="@string/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoLogin" />

</LinearLayout>