<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/upload_image_padding"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/taken_photo"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/choose_top"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/btn_top"/>

                <Button
                    android:id="@+id/choose_pants"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/btn_pants"/>

                <Button
                    android:id="@+id/choose_shoes"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/btn_shoes"/>


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar_clothes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>